--- a/src/components/Timer.css
+++ b/src/components/Timer.css
@@ -1,3 +1,8 @@
+*{
+	font-family: myFirstFont;
+	color: #ffff;
+}
+
 .format-time {
 	display: flex;
 	flex-direction: row;
@@ -8,7 +13,6 @@
 	font-size: 18px;
 	align-items: center;
 	font: DS-DIGIT !important;
-	
 }
 
 @font-face {
@@ -24,45 +28,46 @@
 
 .display-numbers {
 	font-family: myFirstFont;
-	color: darkgrey;
-	height:50%;
-	background:#18181a;
+	color: #9dd3e1;
+	height: 50%;
+	background: #18181a;
 	-moz-box-shadow: 0 0px 0px #4c4c4f;
-    -webkit-box-shadow: 0 0px 0px #4c4c4f;
-    box-shadow: 0 0.8px 0.8px #4c4c4f;
+	-webkit-box-shadow: 0 0px 0px #4c4c4f;
+	box-shadow: 0 0.8px 0.8px #4c4c4f;
 	border-radius: 4px;
 	width: 100%;
-    justify-content: center;
-    display: flex;
-    align-items: center;
-    font-size: 50px;
-
-
+	justify-content: center;
+	display: flex;
+	align-items: center;
+	font-size: 50px;
+	justify-content:space-around;
+	
 	
 }
 
 .container-timer {
-	background-color:#313131;
-	width: 100%;
-	box-shadow: 0px 1px 4px rgba(14, 31, 53, 0.12),
-	 0px 4px 18px rgba(40, 53, 14, 0.1), 0px 6px 12px rgba(98, 99, 100, 0.08);
 	
+	width: 100%;
+	
+	height: auto !important;
+	box-shadow: 0px 1px 4px rgba(14, 31, 53, 0.12),
+		0px 4px 18px rgba(40, 53, 14, 0.1), 0px 6px 12px rgba(98, 99, 100, 0.08);
 }
 
 .content-timer {
 	width: 100%;
-	border: beige 1px solid;
+	border-radius: 10px ;
 	display: flex;
-    background:#313131;
+	background: #313131;
 	flex-direction: column;
-
+	box-shadow: rgba(0, 0, 0, 0.2) 0px 12px 28px 0px, rgba(0, 0, 0, 0.1) 0px 2px 4px 0px, rgba(255, 255, 255, 0.05) 0px 0px 0px 1px inset;
 }
 
 .display {
 	display: flex;
 	flex-direction: row;
 	min-height: 200px;
-	padding:5% 5% 0% 5%;
+	padding: 5% 5% 0% 5%;
 }
 
 .display-timer {
@@ -72,9 +77,6 @@
 	width: 60%;
 	background: #313131;
 	align-items: center;
-	
-
-    
 }
 
 .buttons-display {
@@ -85,10 +87,10 @@
 	gap: 4%;
 	font-size: 18px;
 	min-width: 20%;
-	
+
 	width: 40%;
 	font: DS-DIGIT !important;
-    background:#313131;
+	background: #313131;
 }
 .container-controls {
 	display: flex;
@@ -98,43 +100,101 @@
 	height: 100%;
 	min-height: 120px;
 	width: 100%;
-	background-color: #313131;
 }
 
-
-.arrows-buttons{
-
+.arrows-buttons {
 	display: flex;
 	flex-direction: row;
 	
+}
+.arrows-buttons>span{
 
+	width:100%;
+}
+
+.button-power {
+	width: 100%;
+}
+
+
+.key__button{
+	display: inline-block;
+	width: 100%;
+	height: 40px;
+	border-radius: 10px;
+	background:linear-gradient(180deg , #282828 ,#202020);
+	box-shadow:inset  -8px 0 8px rgba(0, 0, 0, 0.5),
+				inset 0 -18px 8px rgba(0, 0, 0, 0.25),
+				 4px 0 0px 3px rgba(0, 0, 0, 0.75),
+			10px 10px 10px rgba(0, 0, 0, 0.80);
+		overflow: hidden;
 
 }
 
-.button-power{
-width: 100%;
+.key__button::before{
+	
+	position: absolute;
+	top: 3px;
+	left: 2px;
+	bottom: 4px;
+	right: 2px;
+	border-radius: 10px;
+	background: linear-gradient(180deg , #232323 ,#4a4a4a);
+	box-shadow: -10px -10px -10px rgba(255,255,255,0.25);
+	border-left:1px solid #0004 ;
+	border-top:1px solid #0004 ;
+	border-bottom:1px solid #0004 ;
+	border-right:1px solid #0004 ;
 
-
+	
 }
 
-.container-power{
 
+.key__button:active{
+    -webkit-box-shadow: 0px 2px 0px #4a4a4a;
+    -moz-box-shadow: 0px 2px 0px #4a4a4a;
+    box-shadow: 0px 2px 0px #4a4a4a;
+    position:relative;
+    top:4px;
+	transform: translateY(0.5px); 
 }
 
-.icon-clock{
+
+.icon-clock {
 	width: 100px;
 	height: 100px;
 	display: flex;
-	color:red;
+	color: red;
 	justify-content: center;
 	align-items: center;
 	background-color: #313131;
 	border-radius: 50%;
 	box-shadow: 0px 1px 4px rgba(14, 31, 53, 0.12),
-	 0px 4px 18px rgba(40, 53, 14, 0.1), 0px 6px 12px rgba(98, 99, 100, 0.08);
-	
+		0px 4px 18px rgba(40, 53, 14, 0.1), 0px 6px 12px rgba(98, 99, 100, 0.08);
 }
 
+//estilos a los svg
+.up {
+	color: white !important;
+	background-color: #ffff;
+}
 
+.circle {
+	color: white !important;
+	
+	width: 10px;
+	height: 10px;
+	border-radius: 50%;
+	
+	justify-content: start;
+	align-items: start;
+	margin: 10px 15px;
+	color: white;
+	    box-shadow: 3px 2px 20px;
+}
 
+.container-power{
+	
+
+}
 
